--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
 
   <div class="webapps" id="webapps">
     <h2><br><br>Web Apps</h2>
-    <p class="pending">
+    <p class="mymap">
         <br>
-        Pending
+        <a href="https://litsawoo.github.io/MyWebApp/index.html" target="_blank">Mongolian Mammals Map</a>
         <br><br><br><br>
     </p>
   </div>
