--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -340,7 +340,566 @@
 
 <!--Legend-->
 <div id="legend" >
-  
+  <h2 id="words">Legend</h2>
+<div id="table">
+  <table>
+    <tr>
+ <td>
+  <span id="Allocricetuluscurtatus"></span>
+  <em>Allocricetulus curtatus</em>
+</td> 
+<td>
+  <span id="Alticola"></span>
+  <em>Alticola</em>
+</td>
+<td>
+<div id="Alticolabarakshin"></div>
+  <em>Alticola barakshin</em>
+</td>
+<td>
+  <div id="Alticolasemicanus"></div>
+  <em>Alticola semicanus</em>
+</td>
+<td>
+  <div id="Alticolastrelzowi"></div>
+  <em>Alticola strelzowi</em>
+</td>
+<td>
+  <div id="Alticolatuvinicus"></div>
+  <em>Alticola tuvinicus</em>
+</td>
+<td>
+  <div id="Alticolatuvinicuscf"></div>
+  <em>Alticola tuvinicus cf.</em>
+</td>
+<td>
+  <div id="Apodemus"></div>
+  <em>Apodemus</em>
+</td>
+<td>
+  <div id="Apodemusagrarius"></div>
+  <em>Apodemus agrarius</em>
+</td>
+<td>
+  <div id="Apodemuspeninsulae"></div>
+  <em>Apodemus peninsulae</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Apodemusuralensis"></div>
+  <em>Apodemus uralensis</em>
+</td>
+<td>
+  <div id="Bosgrunniens"></div>
+  <em>Bod grunniens</em>
+</td>
+<td>
+  <div id="Buforaddei"></div>
+  <em>Bufo raddei</em>
+</td>
+<td>
+  <div id="Camelusbactrianus"></div>
+  <em>Camelus bactrianus</em>
+</td>
+<td>
+  <div id="Canislupus"></div>
+  <em>Canis lupus</em>
+</td>
+<td>
+  <div id="Caprahircus"></div>
+  <em>Capra hircus</em>
+</td>
+<td>
+  <div id="Cardiocraniusparadoxus"></div>
+  <em>Cardiocranius paradoxus</em>
+</td>
+<td>
+  <div id="Cervuscanadensis"></div>
+  <em>Cervus canadensis</em>
+</td>
+<td>
+  <div id="Cervuselaphus"></div>
+  <em>Cervus elaphus</em>
+</td>
+<td>
+  <div id="Clethrionomys"></div>
+  <em>Clethrionomys</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Clethrionomysrufocanus"></div>
+  <em>Clethrionomys rufocanus</em>
+</td>
+<td>
+  <div id="Clethrionomysrutilus"></div>
+  <em>Clethrionomys rutilus</em>
+</td>
+<td>
+  <div id="Clethrionomysrutiluscf"></div>
+  <em>Clethrionomys rutilus cf.</em>
+</td>
+<td>
+  <div id="Cricetulus"></div>
+  <em>Cricetulus</em>
+</td>
+<td>
+  <div id="Cricetulusbarabensis"></div>
+  <em>Cricetulus barabensis</em>
+</td>
+<td>
+  <div id="Cricetuluslongicaudatus"></div>
+  <em>Cricetulus longicaudatus</em>
+</td>
+<td>
+  <div id="Cricetuluslongicaudatuscf"></div>
+  <em>Cricetulus longicaudatus cf.</em>
+</td>
+<td>
+  <div id="Cricetulusmigratorius"></div>
+  <em>Cricetulus migratorius</em>
+</td>
+<td>
+  <div id="Cricetulussokolovi"></div>
+  <em>Cricetulus sokolovi</em>
+</td>
+<td>
+  <div id="Crocidurashantungensis"></div>
+  <em>Crocidura shantungensis</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Crocidurasuaveolens"></div>
+  <em>Crocidura suaveolens</em>
+</td>
+<td>
+  <div id="Dipussagitta"></div>
+  <em>Dipus sagitta</em>
+</td>
+<td>
+  <div id="Dryomysnitedula"></div>
+  <em>Dryomys nitedula</em>
+</td>
+<td>
+  <div id="Ellobiustancrei"></div>
+  <em>Ellobius tancrei</em>
+</td>
+<td>
+  <div id="Eolagurusluteus"></div>
+  <em>Eolagurus luteus</em>
+</td>
+<td>
+  <div id="Eptesicus"></div>
+  <em>Eptesicus</em>
+</td>
+<td>
+  <div id="Eptesicusgobiensis"></div>
+  <em>Eptesicus gobiensis</em>
+</td>
+<td>
+  <div id="Eptesicusnilssoni"></div>
+  <em>Eptesicus nilssoni</em>
+</td>
+<td>
+  <div id="Eptesicusserotinus"></div>
+  <em>Eptesicus serotinus</em>
+</td>
+<td>
+  <div id="Equus hemionus"></div>
+  <em>Equus hemionus</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Euchoreutesnaso"></div>
+  <em>Euchoreutes naso</em>
+</td>
+<td>
+  <div id="Eutamiassibiricus"></div>
+  <em>Eutamias sibiricus</em>
+</td>
+<td>
+  <div id="Gazellasubgutterosa"></div>
+  <em>Gazella subgutterosa</em>
+</td>
+<td>
+  <div id="Hemiechinusauritus"></div>
+  <em>Hemiechinus auritus</em>
+</td>
+<td>
+  <div id="Hypsugoalaschanicus"></div>
+  <em>Hypsugo alaschanicus</em>
+</td>
+<td>
+  <div id="Lasiopodomysbrandtii"></div>
+  <em>Lasiopodomys brandtii</em>
+</td>
+<td>
+  <div id="Lasiopodomysmandarinus"></div>
+  <em>Lasiopodomys mandarinus</em>
+</td>
+<td>
+  <div id="Lepustimidus"></div>
+  <em>Lepus timidus</em>
+</td>
+<td>
+  <div id="Lepustolai"></div>
+  <em>Lepus tolai</em>
+</td>
+<td>
+  <div id="Marmota"></div>
+  <em>Marmota</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Marmotabaibacina"></div>
+  <em>Marmota baibacina</em>
+</td>
+<td>
+  <div id="Marmotasibirica"></div>
+  <em>Marmota sibirica</em>
+</td>
+<td>
+  <div id="Martesfoina"></div>
+  <em>Martes foina</em>
+</td>
+<td>
+  <div id="Melesleucurus"></div>
+  <em>Meles leucurus</em>
+</td>
+<td>
+  <div id="Melesmeles"></div>
+  <em>Meles meles</em>
+</td>
+<td>
+  <div id="Meriones"></div>
+  <em>Meriones</em>
+</td>
+<td>
+  <div id="Merionesmeridianus"></div>
+  <em>Meriones meridianus</em>
+</td>
+<td>
+  <div id="Merionestamarscinus"></div>
+  <em>Meriones tamariscinus</em>
+</td>
+<td>
+  <div id="Merionesunguiculatus"></div>
+  <em>Meriones unguiculatus</em>
+</td>
+<td>
+  <div id="Microtus"></div>
+  <em>Microtus</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Microtusarvalis"></div>
+  <em>Microtus arvalis</em>
+</td>
+<td>
+  <div id="Microtusfortis"></div>
+  <em>Microtus fortis</em>
+</td>
+<td>
+  <div id="Microtusfortiscf"></div>
+  <em>Microtus fortis cf.</em>
+</td>
+<td>
+  <div id="Microtusgregalis"></div>
+  <em>Microtus gregalis</em>
+</td>
+<td>
+  <div id="Microtusgregaliscf"></div>
+  <em>Microtus gregalis cf.</em>
+<td>
+  <div id="Microtuslimnophilus"></div>
+  <em>Microtus limnophilus</em>
+</td>
+<td>
+  <div id="Microtusmaximowiczii"></div>
+  <em>Microtus maximowiczii</em>
+</td>
+<td>
+  <div id="Microtusmaximowicziicf"></div>
+  <em>Microtus maximowiczii cf.</em>
+</td>
+<td>
+  <div id="Microtusmongolicus"></div>
+  <em>Microtus mongolicus</em>
+</td>
+<td>
+  <div id="Microtusmongolicuscf"></div>
+  <em>Microtus mongolicus cf.</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Microtusoeconomus"></div>
+  <em>Microtus oeconomus</em>
+</td>
+<td>
+  <div id="Microtusoeconomuscf"></div>
+  <em>Microtus oeconomus cf.</em>
+</td>
+<td>
+  <div id="Mus"></div>
+  <em>Mus</em>
+</td>
+<td>
+  <div id="Musmusculus"></div>
+  <em>Mus musculus</em>
+</td>
+<td>
+  <div id="Mustelaaltaica"></div>
+  <em>Mustela altaica</em>
+</td>
+<td>
+  <div id="Mustelaerminea"></div>
+  <em>Mustela erminea</em>
+</td>
+<td>
+  <div id="Mustelanivalis"></div>
+  <em>Mustela nivalis</em>
+</td>
+<td>
+  <div id="Myopusschisticolor"></div>
+  <em>Myopus schisticolor</em>
+</td>
+<td>
+  <div id="Myospalaxaspalax"></div>
+  <em>Myospalax aspalax</em>
+</td>
+<td>
+  <div id="Myospalaxpsilurus"></div>
+  <em>Myospalax psilurus</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Myotisaurescens"></div>
+  <em>Myotis aurescens</em>
+</td>
+<td>
+  <div id="Myotisbrandtii"></div>
+  <em>Myotis brandtii</em>
+</td>
+<td>
+  <div id="Myotisdavidii"></div>
+  <em>Myotis davidii</em>
+</td>
+<td>
+  <div id="Myotisnattereri"></div>
+  <em>Myotis nattereri</em>
+</td>
+<td>
+  <div id="Myotispetax"></div>
+  <em>Myotis petax</em>
+</td>
+<td>
+  <div id="Myotissibiricus"></div>
+  <em>Myotis sibiricus</em>
+</td>
+<td>
+  <div id="Neomysfodiens"></div>
+  <em>Neomys fodiens</em>
+</td>
+<td>
+  <div id="Ochotona"></div>
+  <em>Ochotona</em>
+</td>
+<td>
+  <div id="Ochotonaalpina"></div>
+  <em>Ochotona alpina</em>
+</td>
+<td>
+  <div id="Ochotonadauurica"></div>
+  <em>Ochotona dauurica</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Ochotonahoffmanni"></div>
+  <em>Ochotona hoffmanni</em>
+</td>
+<td>
+  <div id="Ochotonahyperborea"></div>
+  <em>Ochotona hyperborea</em>
+</td>
+<td>
+  <div id="Ochotonapallasi"></div>
+  <em>Ochotona pallasi</em>
+</td>
+<td>
+  <div id="Ondatrazibethicus"></div>
+  <em>Ondatra zibethicus</em>
+</td>
+<td>
+  <div id="Orientallactaga"></div>
+  <em>Orientallactaga</em>
+</td>
+<td>
+  <div id="Oreintallactagabalikunica"></div>
+  <em>Orientallactaga balikunica</em>
+</td>
+<td>
+  <div id="Orientallactagabullata"></div>
+  <em>Orientallactaga bullata</em>
+</td>
+<td>
+  <div id="Orientallactagasibirica"></div>
+  <em>Orientallactaga sibirica</em>
+</td>
+<td>
+  <div id="Ovisammon"></div>
+  <em>Ovis ammon</em>
+</td>
+<td>
+  <div id="Ovisaries"></div>
+  <em>Ovis aries</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Phodopus"></div>
+  <em>Phodopus</em>
+</td>
+<td>
+  <div id="Phodopuscampbelli"></div>
+  <em>Phodopus campbelli</em>
+</td>
+<td>
+  <div id="Phodopusrborovskii"></div>
+  <em>Phodopus roborovskii</em>
+</td>
+<td>
+  <div id="Plecotuskozlovi"></div>
+  <em>Plectous kozlovi</em>
+</td>
+<td>
+  <div id="Plectousognevi"></div>
+  <em>Plecotus ognevi</em>
+</td>
+<td>
+  <div id="Pygeretmuspumilio"></div>
+  <em>Pygeretmus pumilio</em>
+</td>
+<td>
+  <div id="Rattusnorvegicus"></div>
+  <em>Rattus norvegicus</em>
+</td>
+<td>
+  <div id="Rhombomysopimus"></div>
+  <em>Rhombomys opimus</em>
+</td>
+<td>
+  <div id="Salpingotuscrassicauda"></div>
+  <em>Salpingotus crassicauda</em>
+</td>
+<td>
+  <div id="Salpingotuskozlovi"></div>
+  <em>Salpingotus kozlovi</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Sciurusvulgaris"></div>
+  <em>Sciurus vulgaris</em>
+</td>
+<td>
+  <div id="Sorex"></div>
+  <em>Sorex</em>
+</td>
+<td>
+  <div id="Sorexcaecutiens"></div>
+  <em>Sorex caecutiens</em>
+</td>
+<td>
+  <div id="Sorexdaphaenodon"></div>
+  <em>Sorex daphaenodon</em>
+</td>
+<td>
+  <div id="Sorexisodon"></div>
+  <em>Sorex isodon</em>
+</td>
+<td>
+  <div id="Sorexminutissimus"></div>
+  <em>Sorex minutissimus</em>
+</td>
+<td>
+  <div id="Sorexroboratus"></div>
+  <em>Sorex roboratus</em>
+</td>
+<td>
+  <div id="Sorexroboratuscf"></div>
+  <em>Sorex roboratus cf.</em>
+</td>
+<td>
+  <div id="Sorextundrensis"></div>
+  <em>Sorex tundrensis</em>
+</td>
+<td>
+  <div id="Sorextundrensiscf"></div>
+  <em>Sorex tundrensis cf.</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Spermophilusalaschanicus"></div>
+  <em>Spermophilus alaschanicus</em>
+</td>
+<td>
+  <div id="Spermophilusdauricus"></div>
+  <em>Spermophilus dauricus</em>
+</td>
+<td>
+  <div id="Spermophiluspallidicauda"></div>
+  <em>Spermophilus pallidicauda</em>
+</td>
+<td>
+  <div id="Spermophiluspallidicaudacf"></div>
+  <em>Spermophilus pallidicauda cf.</em>
+</td>
+<td>
+  <div id="Stylodipusandrewsi"></div>
+  <em>Spermophilus andrewsi</em>
+</td>
+<td>
+  <div id="Stylodipussungorus"></div>
+  <em>Stylodipus sungorus</em>
+</td>
+<td>
+  <div id="Tamiassibiricus"></div>
+  <em>Tamias sibiricus</em>
+</td>
+<td>
+  <div id="Urocitellusundulatus"></div>
+  <em>Urocitellus undulatus</em>
+</td>
+<td>
+  <div id="Vespertilio"></div>
+  <em>Vespertilio</em>
+</td>
+<td>
+  <div id="Vespertiliomurinus"></div>
+  <em>Vespertilio murinus</em>
+</td>
+</tr>
+<tr>
+<td>
+  <div id="Vulpescorsac"></div>
+  <em>Vulpes corsac</em>
+</td>
+<td>
+  <div id="Vulpesvulpes"></div>
+  <em>Vulpes vulpes</em>
+</td>
+</tr>
+</table>
+</div>
 </div>
 
   <!--Map-->
