--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Mammals of Mongolia</title>
   <!--Libraries-->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
