--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -37,6 +37,9 @@
 
 </head>
 <body>
+  <div id="Titles">
+    Mammals of Mongolia
+  </div>
   <!--About Info-->
   <div id="About">
     <button id="aboutmap">About This Map</button>
@@ -74,7 +77,7 @@
             <br>
             <a class="link" href="https://www.codexworld.com/multi-select-dropdown-list-with-checkbox-jquery/" target="_blank">Multiselect Dropdown Menu</a>
             <br>
-            <a class="link" href="https://github.com/ptma/Leaflet.Legend" target="_blank">Legend</a>
+            <a class="link" href="https://unmcop.unm.edu/metals/#" target="_blank">Legend</a>
             <br>
             <a class="link" href="http://leaflet-extras.github.io/leaflet-providers/preview/" target="_blank">Map Base Layers</a>
         </p>
