--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -173,7 +173,7 @@
 <optgroup label="Eptesicus">
   <option value="Eptesicus">Eptesicus</option>
   <option value="Eptesicus gobiensis">Eptesicus gobiensis</option>
-  <option value="Eptesicus nilssoni">Eptesicus nilssoni</option>
+  <option value="Eptesicus nilssonii">Eptesicus nilssonii</option>
   <option value="Eptesicus serotinus">Eptesicus serotinus</option>
 </optgroup>
 <optgroup label="Equus">
@@ -186,7 +186,7 @@
   <option value="Eutamias sibiricus">Eutamias sibiricus</option>
 </optgroup>
 <optgroup label="Gazella">
-  <option value="Gazella subguttorosa">Gazella subgutterosa</option>
+  <option value="Gazella subgutturosa">Gazella subgutturosa</option>
 </optgroup>
 <optgroup label="Hemiechinus">
   <option value="Hemiechinus auritus">Hemiechinus auritus</option>
@@ -260,7 +260,7 @@
     <option value="Ochotona dauurica">Ochotona dauurica</option>
     <option value="Ochotona hoffmanni">Ochotona hoffmanni</option>
     <option value="Ochotona hyperborea">Ochotona hyperborea</option>
-    <option value="Ochotona pallasi">Ochotona pallasi</option>
+    <option value="Ochotona pallasii">Ochotona pallasii</option>
     </optgroup>
     <optgroup label="Ondatra">
       <option value="Ondatra zibethicus">Ondatra zibethicus</option>
@@ -371,6 +371,7 @@
         <option value="Alticola tuvinicus">Alticola tuvinicus</option>
     </optgroup>
     <optgroup label="Apodemus">
+        <option value="Apodemus agrarius">Apodemus agrarius</option>
         <option value="Apodemus peninsulae">Apodemus peninsulae</option>
         <option value="Apodemus uralensis">Apodemus uralensis</option>
     </optgroup>
@@ -400,6 +401,7 @@
 </optgroup>
 <optgroup label="Crocidura">
   <option value="Crocidura shantungensis">Crocidura shantungensis</option>
+  <option value="Crocidura suaveolens">Crocidura suaveolens</option>
 </optgroup>
 <optgroup label="Dipus">
   <option value="Dipus sagitta">Dipus sagitta</option>
@@ -415,8 +417,11 @@
 </optgroup>
 <optgroup label="Eptesicus">
   <option value="Eptesicus gobiensis">Eptesicus gobiensis</option>
-  <option value="Eptesicus nilssoni">Eptesicus nilssoni</option>
+  <option value="Eptesicus nilssonii">Eptesicus nilssonii</option>
   <option value="Eptesicus serotinus">Eptesicus serotinus</option>
+</optgroup>
+<optgroup label="Equus">
+  <option value="Equus hemionus">Equus hemionus</option>
 </optgroup>
 <optgroup label="Euchoreutes">
   <option value="Euchoreutes naso">Euchoreutes naso</option>
@@ -425,7 +430,7 @@
   <option value="Eutamias sibiricus">Eutamias sibiricus</option>
 </optgroup>
 <optgroup label="Gazella">
-  <option value="Gazella subguttorosa">Gazella subgutterosa</option>
+  <option value="Gazella subgutturosa">Gazella subgutturosa</option>
 </optgroup>
 <optgroup label="Hemiechinus">
   <option value="Hemiechinus auritus">Hemiechinus auritus</option>
@@ -456,6 +461,9 @@
   <option value="Meriones meridianus">Meriones meridianus</option>
   <option value="Meriones tamariscinus">Meriones tamariscinus</option>
   <option value="Meriones unguiculatus">Meriones unguiculatus</option>
+</optgroup>
+<optgroup label="Microtus">
+  <option value="Microtus arvalis">Microtus arvalis</option>
 </optgroup>
 <optgroup label="Mus">
   <option value="Mus musculus">Mus musculus</option>
@@ -491,7 +499,7 @@
     <option value="Ochotona dauurica">Ochotona dauurica</option>
     <option value="Ochotona hoffmanni">Ochotona hoffmanni</option>
     <option value="Ochotona hyperborea">Ochotona hyperborea</option>
-    <option value="Ochotona pallasi">Ochotona pallasi</option>
+    <option value="Ochotona pallasii">Ochotona pallasii</option>
     </optgroup>
     <optgroup label="Ondatra">
       <option value="Ondatra zibethicus">Ondatra zibethicus</option>
@@ -725,8 +733,8 @@
   <em>Eptesicus gobiensis</em>
 </td>
 <td>
-  <div id="Eptesicusnilssoni"></div>
-  <em>Eptesicus nilssoni</em>
+  <div id="Eptesicusnilssonii"></div>
+  <em>Eptesicus nilssonii</em>
 </td>
 <td>
   <div id="Eptesicusserotinus"></div>
@@ -747,8 +755,8 @@
   <em>Eutamias sibiricus</em>
 </td>
 <td>
-  <div id="Gazellasubgutterosa"></div>
-  <em>Gazella subgutterosa</em>
+  <div id="Gazellasubgutturosa"></div>
+  <em>Gazella subgutturosa</em>
 </td>
 <td>
   <div id="Hemiechinusauritus"></div>
@@ -956,8 +964,8 @@
   <em>Ochotona hyperborea</em>
 </td>
 <td>
-  <div id="Ochotonapallasi"></div>
-  <em>Ochotona pallasi</em>
+  <div id="Ochotonapallasii"></div>
+  <em>Ochotona pallasii</em>
 </td>
 <td>
   <div id="Ondatrazibethicus"></div>
