--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <h2><br><br>Web Apps</h2>
     <p class="mymap">
         <br>
-        <a class="mongoliamap" href="https://litsawoo.github.io/MyWebApp/MongoliaSpecies.html" target="_blank">Mongolian Mammals Map</a>
+        <a class="mongoliamap" href="https://litsawoo.github.io/MyWebApp/index.html" target="_blank">Mongolian Mammals Map</a>
         <br><br><br><br>
     </p>
   </div>
